{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 101,
  "lineage": "ef8905a3-7732-41f6-53bf-f3e93ec8c16a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "my_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.199.3.61",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-10T00:25:31.069-07:00",
            "id": "projects/intrepid-period-395206/regions/europe-west1/addresses/my-static-ip",
            "name": "my-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "intrepid-period-395206",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/regions/europe-west1/addresses/my-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-10T00:13:30.121-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/intrepid-period-395206/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/networks/my-network-project",
            "priority": 1000,
            "project": "intrepid-period-395206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "my_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/intrepid-period-395206/global/forwardingRules/my-forwarding-rule",
            "ip_address": "34.149.17.152",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-forwarding-rule",
            "port_range": "80-80",
            "project": "intrepid-period-395206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/forwardingRules/my-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/targetHttpProxies/my-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.my_backend_bucket_project",
            "google_compute_target_http_proxy.my_target_http_proxy",
            "google_compute_url_map.my_url_map",
            "google_storage_bucket.my_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "my_forwarding_rule_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/intrepid-period-395206/global/networks/my-network-project",
            "mtu": 0,
            "name": "my-network-project",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "intrepid-period-395206",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/networks/my-network-project"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T00:13:30.803-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/intrepid-period-395206/regions/europe-west1/subnetworks/backend-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "backend-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/networks/my-network-project",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "intrepid-period-395206",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/regions/europe-west1/subnetworks/backend-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T00:13:30.761-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/intrepid-period-395206/regions/europe-west1/subnetworks/frontend-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "frontend-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/networks/my-network-project",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "intrepid-period-395206",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/regions/europe-west1/subnetworks/frontend-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "my_target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T00:25:30.977-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/intrepid-period-395206/global/targetHttpProxies/my-target-http-proxy",
            "name": "my-target-http-proxy",
            "project": "intrepid-period-395206",
            "proxy_bind": false,
            "proxy_id": 7824385446602419717,
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/targetHttpProxies/my-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/urlMaps/my-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.my_backend_bucket_project",
            "google_compute_url_map.my_url_map",
            "google_storage_bucket.my_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "my_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T00:09:40.076-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/backendBuckets/my-backend-bucket-project",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "9tjF_5eC91A=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/intrepid-period-395206/global/urlMaps/my-url-map",
            "map_id": 5240628357933642715,
            "name": "my-url-map",
            "path_matcher": [],
            "project": "intrepid-period-395206",
            "self_link": "https://www.googleapis.com/compute/v1/projects/intrepid-period-395206/global/urlMaps/my-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.my_backend_bucket_project",
            "google_storage_bucket.my_bucket"
          ]
        }
      ]
    }
  ]
}